Fix overflow scrolling for tablets

--- a/js/VariablePanel/VariablePanel.css
+++ b/js/VariablePanel/VariablePanel.css
@@ -1,16 +1,16 @@
 #LaserCanvasVariablesPanel {
 	position: absolute;
 	left: 0;
-	bottom: -221px;
+	bottom: 0;
 	width: 100%;
-	height: 220px;
-	transition-property: bottom;
+	height: 0;
+	transition-property: height;
 	transition-duration: 350ms;
 	border-top: 1px solid #ccc;
 }
 
 	[data-variables-visible="true"] #LaserCanvasVariablesPanel {
-		bottom: 0;
+		height: 220px;
 	}
 
 /* Toggle variables button */
